Add check of compiler's C++ Standard Library
Use try_run to compile and run a simple C++ program that outputs the
Standard C++ Library in use at compile/link time. Support GNU and
libc++ libraries only for now. Currently this try_run will not
work when cross-compiling.

See also the Boost.Predef library, which could possibly be used either
by find_package, or as an import using bcp

http://www.boost.org/doc/libs/1_55_0/libs/predef/doc/html/index.html

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,4 +24,15 @@ list(INSERT CMAKE_MODULE_PATH 0 ${PROJECT_SOURCE_DIR}/CMake/cmake-cxx11/Modules)
 # - Check Features
 include(CheckCXX11Features)
 
+# - Check C++ Standard Library (NB, not cross compile safe yet! Though
+# if we do cross-compile, then everything should be appropriately provided
+# by the toolchain?).
+try_run(
+  STDLIB_RUN_RESULT
+  STDLIB_COMPILE_RESULT
+  ${PROJECT_BINARY_DIR}/cxx_stdlib
+  ${PROJECT_SOURCE_DIR}/CMake/CheckCXXStandardLibrary/cxx11-test-stdlib.cpp
+  RUN_OUTPUT_VARIABLE STDLIB_OUTPUT
+  )
+message(STATUS "C++ Standard Library : ${STDLIB_OUTPUT}")
 
