Demonstrate creation of C++11 support header
List CheckCXX11Features variables in a header template as "arguments"
to cmakedefine. Use configure_file to generate the header in the
build directory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,3 +36,8 @@ try_run(
   )
 message(STATUS "C++ Standard Library : ${STDLIB_OUTPUT}")
 
+#-----------------------------------------------------------------------
+# Example generation of a header indicating availability of C++11 features
+#
+configure_file(example_header.hpp.in example_header.hpp)
+
