--- a/example_header.hpp.in
+++ b/example_header.hpp.in
@@ -26,6 +26,11 @@
 #cmakedefine HAS_CXX11_DECLTYPE
 #cmakedefine HAS_CXX11_DEFAULT_TEMPLATE_ARGUMENTS
 #cmakedefine HAS_CXX11_FUNC
+#cmakedefine HAS_CXX11_FUNCTIONAL_BIND
+#cmakedefine HAS_CXX11_FUNCTIONAL_FUNCTION
+#cmakedefine HAS_CXX11_FUNCTIONAL_HASH
+#cmakedefine HAS_CXX11_FUNCTIONAL_MEM_FN
+#cmakedefine HAS_CXX11_FUNCTIONAL_REF
 #cmakedefine HAS_CXX11_INITIALIZER_LIST
 #cmakedefine HAS_CXX11_LAMBDA
 #cmakedefine HAS_CXX11_LIB_REGEX
