Add unittests for cpp0x

--- a/FNALCore/cpp0x/CMakeLists.txt
+++ b/FNALCore/cpp0x/CMakeLists.txt
@@ -134,3 +134,10 @@ install(FILES ${DETAIL_HDRS}
   COMPONENT Development
   )
 
+#-----------------------------------------------------------------------
+# Test if required
+if(FNALCore_ENABLE_TESTING)
+  add_subdirectory(unittests)
+endif()
+
+
