--- a/FNALCore/cetlib/CMakeLists.txt
+++ b/FNALCore/cetlib/CMakeLists.txt
@@ -96,3 +96,10 @@ install(FILES ${cetlib_SSL_HDRS}
   COMPONENT Development
   )
 
+#-----------------------------------------------------------------------
+# Testing
+if(FNALCore_ENABLE_TESTING)
+  add_subdirectory(unittests)
+endif()
+
+
