--- a/FNALCore/fhiclcpp/CMakeLists.txt
+++ b/FNALCore/fhiclcpp/CMakeLists.txt
@@ -34,5 +34,11 @@ install(FILES ${PUBLIC_HDRS}
   COMPONENT Development
   )
 
+#-----------------------------------------------------------------------
+# Testing
+if(FNALCore_ENABLE_TESTING)
+  add_subdirectory(unittests)
+endif()
+
 
 # ======================================================================
