Implement minimal Doxygen creation
Add doc subdirectory for holding Doxygen configuration and as a
placeholder for future items. Add CMake option, on by default, to
build Doxygen docs.

Provide minimal Doxy file, using CMake to configure the INPUT_PATH
only at present. Add custom_command/target pair to run Doxygen
over the configuration as part of the ALL target. Install generated
html documentation to CMAKE_INSTALL_DOCDIR.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,13 @@ endif()
 add_subdirectory(FNALCore)
 
 #-----------------------------------------------------------------------
+# Documentation
+option(FNALCore_BUILD_DOCS "Build documentation for FNALCore" ON)
+if(FNALCore_BUILD_DOCS)
+  add_subdirectory(doc)
+endif()
+
+#-----------------------------------------------------------------------
 # Install support files
 #
 configure_package_config_file(
