Generate Doxygen tagfile
Tag files can be used by clients of a package to cross link their
own Doxygen docs with that of the package.

Generate and install a Doxygen tagfile for FNALCore.

TODO: Provide availability of documentation and path to tag file
in FNALCore cmake project config script.

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -4,7 +4,13 @@
 # Doxygen
 find_package(Doxygen 1.8 REQUIRED)
 
+# - Configure
+# We create and install a tags file so that clients can cross link to
+# or documents.
+# TODO: provide path to tag file as a component in the cmake project
+# config file.
 configure_file(FNALCore.doxyfile.in FNALCore.doxyfile @ONLY)
+set(FNALCore_DOXYGEN_TAGFILE "FNALCore.doxytags")
 
 add_custom_command(OUTPUT html/index.html
   COMMAND ${DOXYGEN_EXECUTABLE} FNALCore.doxyfile
@@ -15,6 +21,14 @@ add_custom_command(OUTPUT html/index.html
   )
 add_custom_target(doc ALL DEPENDS html/index.html)
 
+# - HTML docs
 install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html
-  DESTINATION ${CMAKE_INSTALL_DOCDIR}
+  DESTINATION ${CMAKE_INSTALL_DOCDIR}/doxygen
+  COMPONENT Documentation
+  )
+
+# - Doxygen tag file
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${FNALCore_DOXYGEN_TAGFILE}
+  DESTINATION ${CMAKE_INSTALL_DOCDIR}/doxygen
+  COMPONENT Documentation
   )
