Check for emplace member function support
cetlib and higher require presence of emplace member functions
in Standard Library collections. cpp0x does not provide a workaround
for these, so compilation can fail (known to affect GCC prior to 4.8).

Use new emplace tests provided by CheckCXX11Features to FATAL_ERROR
at CMake-time if these member functions are not available in std::vector
and std::map interfaces.

Add note in README to describe known minimal compiler/library support.
To be added to as time and knowledge progress.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,10 +44,16 @@ include(CheckCXXCompilerFlag)
 include(CheckCXX11Features)
 include(CheckCXXStandardLibrary)
 
-# Use of emplace methods in stdlib now requires that (at least)
-# map support this. NEED A CHECK HERE.
-# It appears these are in GCC 4.8, but not 4.7. May not want to
-# support latter, but should still supply a check!!
+# Use of emplace methods in modules now requires that (at least)
+# map support this. As cpp0x does not provide a workaround, fail
+# if CXX11 checks are not present
+if(NOT HAS_CXX11_VECTOR_EMPLACE)
+  message(FATAL_ERROR "${CMAKE_CXX_COMPILER} does not support std::vector emplace member functions")
+endif()
+
+if(NOT HAS_CXX11_MAP_EMPLACE)
+  message(FATAL_ERROR "${CMAKE_CXX_COMPILER} does not support std::map emplace member functions")
+endif()
 
 # In CMake 2.8.12 and higher, these can be propagated to clients via the
 # target_compile_options command
