Update doxygen config for subtrees
Remove dependence of doc generation on FNALCore target as latter is
not currently built. Update input paths and exclusions in doxyfile to
reflect new subtree structure.

TODO: Get doxygen to understand files under cpp0x which have no
extensions.

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -15,7 +15,7 @@ configure_file(FNALCore.doxyfile.in FNALCore.doxyfile @ONLY)
 add_custom_command(OUTPUT html/index.html
   COMMAND ${DOXYGEN_EXECUTABLE} FNALCore.doxyfile
   MAIN_DEPENDENCY FNALCore.doxyfile
-  DEPENDS FNALCore
+  #DEPENDS FNALCore
   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
   COMMENT "Doxygenating FNALCore"
   )
