--- a/doc/FNALCore.doxyfile.in
+++ b/doc/FNALCore.doxyfile.in
@@ -655,7 +655,10 @@ WARN_LOGFILE           =
 # directories like "/usr/src/myproject". Separate the files or directories
 # with spaces.
 
-INPUT                  = @PROJECT_SOURCE_DIR@/FNALCore
+INPUT                  = @PROJECT_SOURCE_DIR@/FNALCore/cpp0x \
+                         @PROJECT_SOURCE_DIR@/FNALCore/cetlib \
+                         @PROJECT_SOURCE_DIR@/FNALCore/fhiclcpp \
+                         @PROJECT_SOURCE_DIR@/FNALCore/messagefacility
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding, which is
@@ -687,7 +690,7 @@ RECURSIVE              = YES
 # Note that relative paths are relative to the directory from which doxygen is
 # run.
 
-EXCLUDE                = */unittests/*
+EXCLUDE                = */test/*
 
 # The EXCLUDE_SYMLINKS tag can be used to select whether or not files or
 # directories that are symbolic links (a Unix file system feature) are excluded
@@ -701,7 +704,7 @@ EXCLUDE_SYMLINKS       = NO
 # against the file with absolute path, so to exclude all test directories
 # for example use the pattern */test/*
 
-EXCLUDE_PATTERNS       = */unittests/*
+EXCLUDE_PATTERNS       = */test/*
 
 # The EXCLUDE_SYMBOLS tag can be used to specify one or more symbol names
 # (namespaces, classes, functions, etc.) that should be excluded from the
