Build messagefacility module using subtree structure
Update paths in messagefacility_module.cmake script to reflect new
subtree structure. Add resultant OBJECT library into FNALCore build,
and add include paths to INTERFACE definitions.

No tests are yet implemented for messagefacility as their structure
under the subtree is complex, with possibly obsolete tests.

NB: Build has not been verified in this commit because of errors
in building with Clang on OSX Mavericks:

- messagefacility/MessageService/ELtsErrorLog.icc causes issues
due to returns and protected visibility.

May work on FNAL gcc platforms...

--- a/FNALCore/CMakeLists.txt
+++ b/FNALCore/CMakeLists.txt
@@ -8,7 +8,7 @@ include_directories(${SQLite3_INCLUDE_DIRS})
 
 #-----------------------------------------------------------------------
 # Compose FNALCore
-set(FNALCore_MODULES cpp0x cetlib fhiclcpp)# messagefacility)
+set(FNALCore_MODULES cpp0x cetlib fhiclcpp messagefacility)
 
 foreach(fcmodule ${FNALCore_MODULES})
   include_directories(${CMAKE_CURRENT_BINARY_DIR})
@@ -29,7 +29,7 @@ add_library(FNALCore SHARED
   $<TARGET_OBJECTS:cpp0x>
   $<TARGET_OBJECTS:cetlib>
   $<TARGET_OBJECTS:fhiclcpp>
-#  $<TARGET_OBJECTS:messagefacility>
+  $<TARGET_OBJECTS:messagefacility>
   )
 
 # - Set core properties
@@ -72,7 +72,7 @@ target_link_libraries(FNALCore
 target_include_directories(FNALCore
   INTERFACE
     # Build interface applies if a client uses find_package against builddir
-    "$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR};${CMAKE_CURRENT_SOURCE_DIR}/cpp0x;${CMAKE_CURRENT_SOURCE_DIR}/cetlib;${CMAKE_CURRENT_SOURCE_DIR}/fhiclcpp>"
+    "$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR};${CMAKE_CURRENT_SOURCE_DIR}/cpp0x;${CMAKE_CURRENT_SOURCE_DIR}/cetlib;${CMAKE_CURRENT_SOURCE_DIR}/fhiclcpp;${CMAKE_CURRENT_SOURCE_DIR}/messagefacility>"
     # Install interface applies if client uses find_package against installdir
     "$<INSTALL_INTERFACE:$<INSTALL_PREFIX>/include/FNALCore>"
 
