Use subtree tests as far as possible
cet_test macro works most easily in directory where tests are located.
Because subtree structure is not directly recursed into, tests for
each module were duplicated in a script at the FNALCore/ level.

Add minimal functionality to allow subtree test scripts to be
used directly. Provide dummy functions for cetbuildtools functionality
that is never used (nor required). Provide simplest possible
implementation of `cet_script` to wrap running of shell script as
test executable.

Remove <name>_module_tests.cmake scripts and instead use
add_subdirectory to recurse directly into <name>/test directories for
cpp0x and fhiclcpp. `cetlib` test script is retained due to need to
reimplement several tests using standard CMake calls. However, bulk
of tests are deferred by add_subdirectory to `cetlib/test`.

TODO: Cet's assumption about testing structure results in several
test failures due to bad paths assumed to be in environment or
hardcoded in shell scripts. Needs fixing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,9 @@ include(CMakePackageConfigHelpers)
 include(GNUInstallDirs)
 include(CheckCXXCompilerFlag)
 
+# - Local Customs
+include(CetDummy)
+
 # - C++11 Check/Configuration
 # To be added: list of C++11 features which *must* be present.
 include(CheckCXX11Features)
