Use consistent output dirs for build products
Set variables CMAKE_<TYPE>_OUTPUT_DIRECTORY to ensure all programs
(TYPE : RUNTIME), libraries (TYPE :LIBRARY) and archives (TYPE :
ARCHIVE) are output to a single location. Define the root for output
as 'BuildProducts' subdirectory of project's build directory. Use
paths set from GNUInstallDirs to set Runtime (bin), Library and
Archive (lib) paths so that layout of BuildProducts matches install
layout.

NOTE: For multiconfig generators like Xcode, each path will be appended
with the build mode, e.g. 'Release'. This will affect CetTest.

Add variable in CetTest module to indicate it has been loaded. Check
this at the start of module and return() if it is set. This ensures
test environment is not nuked when submodules include it, and also
provides a minor performance improvement.

Use cet_test_env() after top level inclusion of CetTest to set
default PATH for tests. Set to CMAKE_RUNTIME_OUTPUT_DIRECTORY plus
PATH from current user environment.

NOTE : it's this setting that's likely to fail for testing on Xcode.

Implement this way so that shell script based tests locate the programs
they wrap. Use of PATH is neccessary to not prevent use of system tools.
This is not completely guaranteed to provide an isolated test - the test
may still run if the PATH contains the program the shell script wraps.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,25 @@ include(GNUInstallDirs)
 include(CheckCXXCompilerFlag)
 
 # - Local Customs
+# - Cetbuildtools bypass/simplifications
 include(CetDummy)
+
+# - Build product locations
+# The variables CMAKE_{RUNTIME,LIBRARY,ARCHIVE}_OUTPUT_DIRECTORY can
+# be used to specify where executables, dynamic and static libraries
+# are output. They initialize the {RUNTIME,LIBRARY,ARCHIVE}_OUTPUT_DIRECTORY
+# properties of targets added via add_{executable,target}, so can
+# targets can override if need be.
+#
+# - Assume for now that GNUInstallDirs provides relative (to
+#   CMAKE_INSTALL_PREFIX) paths, and reflect this layout in the
+#   output directories. This should be o.k. even on DLL platforms
+#   as CMake should output these to the RUNTIME directory.
+#
+set(BASE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/BuildProducts")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${BASE_OUTPUT_DIRECTORY}/${CMAKE_INSTALL_BINDIR}")
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${BASE_OUTPUT_DIRECTORY}/${CMAKE_INSTALL_LIBDIR}")
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${BASE_OUTPUT_DIRECTORY}/${CMAKE_INSTALL_LIBDIR}")
 
 # - C++11 Check/Configuration
 # To be added: list of C++11 features which *must* be present.
@@ -86,6 +104,7 @@ if(FNALCore_ENABLE_TESTING)
   set(BOOST_NO_SYSTEM_PATHS ON)
   find_package(Boost ${BOOST_VERSION} REQUIRED unit_test_framework)
   include(CetTest)
+  cet_test_env("PATH=${CMAKE_RUNTIME_OUTPUT_DIRECTORY}:$ENV{PATH}")
 endif()
 
 #-----------------------------------------------------------------------
