--- a/FNALCore/cpp0x-config.in
+++ b/FNALCore/cpp0x-config.in
@@ -15,25 +15,14 @@
 #define CPP0X_CXX_STDLIB_VERSION "@CXX_STDLIB_VERSION@"
 
 // GCC support macros
-#if defined __GNUC_PATCHLEVEL__
-  # define GCC_VERSION (10000 * __GNUC__ \
-                        + 1000 * __GNUC_MINOR__ \
-                        +        __GNUC_PATCHLEVEL__)
-#elif defined __GNUC_MINOR__
-  # define GCC_VERSION (10000 * __GNUC__ \
-                        + 1000 * __GNUC_MINOR__)
-#elif defined __GNUC__
-  # define GCC_VERSION (10000 * __GNUC__)
-#else
-  # define GCC_VERSION 0
-#endif
-
-# define GCC_IS_AT_LEAST(major, minor, patch) \
-  (GCC_VERSION >= ((10000*(major)) + (1000*(minor)) + (patch)))
+#include "cpp0x/compiler_macros.h"
 
 //----------------------------------------------------------------------
 // Definitions describing C++11 features supported by compiler/stdlib
-//
+// Wrapped inside GCC's macros specification for C++0x support.
+// This *should* also be defined in Clang and Intel, but needs checking!
+
+#if defined __GXX_EXPERIMENTAL_CXX0X__
 #cmakedefine CPP0X_HAS_ALGORITHM_ALL_OF
 #cmakedefine CPP0X_HAS_ALGORITHM_ANY_OF
 #cmakedefine CPP0X_HAS_ALGORITHM_COPY_N
@@ -81,6 +70,7 @@
 #cmakedefine CPP0X_HAS_TYPE_TRAITS_HDR
 #cmakedefine CPP0X_HAS_UTILITY_DECLVAL
 #cmakedefine CPP0X_HAS_VARIADIC_TEMPLATES
+#endif
 
 // ----------------------------------------------------------------------
 // Core feature workarounds:
@@ -89,30 +79,24 @@
 // --- CPP0X_HAS_CONSTEXPR_FUNCTIONS
 #if defined CPP0X_HAS_CONSTEXPR_FUNCTIONS
   #define CONSTEXPR_FCTN constexpr
-
 #else
   #define CONSTEXPR_FCTN
   #define constexpr const
-
 #endif
 
 // --- CPP0X_HAS_CONSTEXPR_VARIABLES
 #if defined CPP0X_HAS_CONSTEXPR_VARIABLES
   #define CONSTEXPR_VAR constexpr
-
 #else
   #define CONSTEXPR_VAR const
   #define constexpr const
-
 #endif
 
 // --- CPP0X_HAS_EXPLICIT_CONVERSION_OPERATORS
 #if defined CPP0X_HAS_EXPLICIT_CONVERSION_OPERATORS
   #define EXPLICIT_CONV_OP explicit
-
 #else
   #define EXPLICIT_CONV_OP
-
 #endif
 
 // --- CPP0X_HAS_NOEXCEPT
@@ -120,7 +104,6 @@
 
 #elif ! defined noexcept
   #define noexcept throw()
-
 #endif
 
 // --- CPP0X_HAS_NULLPTR
@@ -133,11 +116,9 @@
 // --- CPP0X_HAS_STATIC_ASSERT
 #if defined CPP0X_HAS_STATIC_ASSERT
   #define STATIC_ASSERT(pred,mesg) static_assert(pred,mesg)
-
 #else
   #include <boost/static_assert.hpp>
   #define STATIC_ASSERT(pred,mesg) BOOST_STATIC_ASSERT((pred))
-
 #endif
 
 // ----------------------------------------------------------------------
@@ -179,10 +160,8 @@
   #if BOOST_VERSION < 104200
     #error "boost library version is too old; can't provide library workarounds"
   #endif
-
 #endif
 
 // ======================================================================
-
-
 #endif
+
